Changelog
=========

Release 3.7.0
-------------

* Core

  - The handling of detector presets has been changed: preset names (other than
    time) now primarily come from device names.  For example, "mon1=1000" can
    only be used as a preset if there is a monitor channel called "mon1" in
    the detector.  Exceptions are possible, but must be configured.

  - Any detector channel can now be used as a preset.  For channels which don't
    have the ability to stop the measurement at the hardware level, NICOS will
    check that the preset is reached and stop in software.  This allows, for
    example, measuring until a certain number of counts in a region of interest
    is reached.

  - The "lttb" module has been unbundled and is now an external requirement.

* GUI

  - Qt 5 is now preferred if installed, and Qt 4 can be forced by setting
    "NICOS_QT=4" in the environment.

  - A new panel has been added that allows run-time reconfiguration of which
    watchdog conditions should be enabled.  Resolved warnings are now shown as
    such in the notification window.

* Commands

  - Added new core commands "rmove()" and "rmaw()" for relative movement
    of devices.

  - The "help()" command can now be called with a string that represents
    a command or device and will show the correct info.

  - "appendscan()" now works for scans over multiple devices.

* Devices

  - Support for accessing SECoP (Sample Environment Control Protocol) nodes as
    NICOS devices has been added.

  - QMesyDAQ devices with Tango interface have been added.

  - Optional Slack notifier is not longer Python 2 compatible.

* Watchdog

  - The watchdog daemon has been rewritten.  Conditions can now be defined in
    individual setups, together with the devices they relate to.

* Status Monitor

  - Status monitor "block" elements can now be defined in individual setups,
    together with the devices they relate to.  This makes the creation of