@@ -38,11 +38,9 @@ from nicos.configmod import config
 from nicos._vendor.gitversion import get_git_version, get_nicos_version  # isort:skip
 __version__ = nicos_version = get_nicos_version()
 
-# Check for Python version 2.7+ or 3.3+.
-if sys.version_info[0] == 2 and sys.version_info[1] < 7:
-    raise ImportError('NICOS requires Python 2.7 or higher')
-elif sys.version_info[0] == 3 and sys.version_info[1] < 3:
-    raise ImportError('NICOS requires Python 3.3 or higher')
+# Check for Python version 3.6+.
+if sys.version_info[:2] < (3, 6):
+    raise ImportError('NICOS requires Python 3.6 or higher')
 
 
 # Create the nicos session object here to allow the import of submodules.
